WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314249
[YARR] ParentheticalAssertionEnd.bt should propagate the failures to ParentheticalAssertionBegin.bt
https://bugs.webkit.org/show_bug.cgi?id=314249
Summary
[YARR] ParentheticalAssertionEnd.bt should propagate the failures to Parenthe...
Yusuke Suzuki
Reported
2026-05-06 15:40:31 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2026-05-06 15:40:33 PDT
<
rdar://problem/176255579
>
Yusuke Suzuki
Comment 2
2026-05-06 16:06:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64413
EWS
Comment 3
2026-05-06 21:45:29 PDT
Committed
312767@main
(753fe26f5b01): <
https://commits.webkit.org/312767@main
> Reviewed commits have been landed. Closing PR #64413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug